playing with tokenization

--- a/cs124_from_languages_to_information/tokenization.ipynb
+++ b/cs124_from_languages_to_information/tokenization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "source": [
     "import re\r\n",
     "\r\n",
@@ -29,7 +29,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'t': 323747, 'h': 233979, 'e': 435947, '_': 770418, 's': 242844, 'o': 306078, 'n': 238192, 'b': 58967, 'y': 92002, 'w': 88201, 'i': 245079, 'l': 165317, 'a': 284005, 'm': 108615, 'k': 34927, 'p': 55862, 'r': 229871, '1': 224, 'f': 79031, 'c': 83218, 'u': 126744, 'd': 145221, ',': 82413, \"'\": 31067, 'g': 66751, 'v': 36845, ':': 1810, '-': 7841, '.': 77054, '2': 117, 'z': 1626, ';': 17194, 'x': 5000, '3': 82, '?': 10475, '4': 69, 'q': 3577, '5': 73, '6': 56, '7': 34, 'j': 4535, '(': 165, ')': 164, '8': 31, '9': 51, '0': 42, '!': 8827, '[': 2071, ']': 2063, '\"': 450, '&': 21, '<': 28}\n"
+      "{'l': 7, 'o': 7, 'w': 18, '_': 17, 'e': 19, 's': 2, 't': 2, 'n': 8, 'r': 9, 'i': 3, 'd': 3}\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "source": [
     "class StopExecution(Exception):\r\n",
     "    def _render_traceback_(self):\r\n",
@@ -48,70 +48,145 @@
     "    raise StopExecution\r\n",
     "\r\n",
     "# {k: v for k, v in sorted(vocab.items(), key=lambda item: item[0], reverse=True)}\r\n",
-    "{k: v for k, v in sorted(vocab.items(), key=lambda item: item[1], reverse=True)}\r\n",
-    "\r\n"
+    "{k: v for k, v in sorted(vocab.items(), key=lambda item: item[1], reverse=True)}\r\n"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'_': 770418,\n",
-       " 'e': 435947,\n",
-       " 't': 323747,\n",
-       " 'o': 306078,\n",
-       " 'a': 284005,\n",
-       " 'i': 245079,\n",
-       " 's': 242844,\n",
-       " 'n': 238192,\n",
-       " 'h': 233979,\n",
-       " 'r': 229871,\n",
-       " 'l': 165317,\n",
-       " 'd': 145221,\n",
-       " 'u': 126744,\n",
-       " 'm': 108615,\n",
-       " 'y': 92002,\n",
-       " 'w': 88201,\n",
-       " 'c': 83218,\n",
-       " ',': 82413,\n",
-       " 'f': 79031,\n",
-       " '.': 77054,\n",
-       " 'g': 66751,\n",
-       " 'b': 58967,\n",
-       " 'p': 55862,\n",
-       " 'v': 36845,\n",
-       " 'k': 34927,\n",
-       " \"'\": 31067,\n",
-       " ';': 17194,\n",
-       " '?': 10475,\n",
-       " '!': 8827,\n",
-       " '-': 7841,\n",
-       " 'x': 5000,\n",
-       " 'j': 4535,\n",
-       " 'q': 3577,\n",
-       " '[': 2071,\n",
-       " ']': 2063,\n",
-       " ':': 1810,\n",
-       " 'z': 1626,\n",
-       " '\"': 450,\n",
-       " '1': 224,\n",
-       " '(': 165,\n",
-       " ')': 164,\n",
-       " '2': 117,\n",
-       " '3': 82,\n",
-       " '5': 73,\n",
-       " '4': 69,\n",
-       " '6': 56,\n",
-       " '9': 51,\n",
-       " '0': 42,\n",
-       " '7': 34,\n",
-       " '8': 31,\n",
-       " '<': 28,\n",
-       " '&': 21}"
+       "{'e': 19,\n",
+       " 'w': 18,\n",
+       " '_': 17,\n",
+       " 'r': 9,\n",
+       " 'n': 8,\n",
+       " 'l': 7,\n",
+       " 'o': 7,\n",
+       " 'i': 3,\n",
+       " 'd': 3,\n",
+       " 's': 2,\n",
+       " 't': 2}"
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 70
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "source": [
+    "import re\r\n",
+    "\r\n",
+    "text_corpus = \"corpuses/low-low-bpe.txt\"\r\n",
+    "corpus = {}\r\n",
+    "with open(file = text_corpus, mode = \"r\", encoding = 'utf-8') as f:\r\n",
+    "    for line in f:\r\n",
+    "        line = re.sub(r'\\s+', '_\\n', line.strip().lower())\r\n",
+    "        if line[-1] != '_':\r\n",
+    "            line += '_'\r\n",
+    "        # print(line.split('\\n'))\r\n",
+    "        for word in line.split('\\n'):\r\n",
+    "            # print(word)\r\n",
+    "            if word in corpus:\r\n",
+    "                corpus[word] += 1\r\n",
+    "            else:\r\n",
+    "                corpus[word] = 1\r\n",
+    "# print(corpus)\r\n",
+    "{k: v for k, v in sorted(corpus.items(), key=lambda item: item[1], reverse=True)}\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'newer_': 6, 'low_': 5, 'wider_': 3, 'lowest_': 2, 'new_': 2}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 71
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "source": [
+    "pairs = {}\r\n",
+    "for word, frequency in corpus.items():\r\n",
+    "    # print(word)\r\n",
+    "    # print(len(word))\r\n",
+    "    # count occurrences of pairs\r\n",
+    "    for i in range(len(word) - 1):\r\n",
+    "        pair = (word[i], word[i + 1])\r\n",
+    "        current_frequency = pairs.get(pair, 0)\r\n",
+    "        pairs[pair] = current_frequency + frequency\r\n",
+    "\r\n",
+    "# print(pairs)\r\n",
+    "print(set(vocab.keys()))\r\n",
+    "{k: v for k, v in sorted(pairs.items(), key=lambda item: item[1], reverse=True)}"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'o', 'r', 't', 's', 'i', 'l', 'w', 'e', 'd', 'n', '_'}\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{('e', 'r'): 9,\n",
+       " ('r', '_'): 9,\n",
+       " ('w', 'e'): 8,\n",
+       " ('n', 'e'): 8,\n",
+       " ('e', 'w'): 8,\n",
+       " ('l', 'o'): 7,\n",
+       " ('o', 'w'): 7,\n",
+       " ('w', '_'): 7,\n",
+       " ('w', 'i'): 3,\n",
+       " ('i', 'd'): 3,\n",
+       " ('d', 'e'): 3,\n",
+       " ('e', 's'): 2,\n",
+       " ('s', 't'): 2,\n",
+       " ('t', '_'): 2}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 80
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "source": [
+    "plain_vocab = sorted(list(vocab.keys()))\r\n",
+    "last_key = ''\r\n",
+    "# for k, v in sorted(pairs.items(), key=lambda item: item[1], reverse=True):\r\n",
+    "#     if len(last_key) == 0:\r\n",
+    "#         plain_vocab.append(k[0] + k[1])\r\n",
+    "#     else:\r\n",
+    "#         plain_vocab.append(plain_vocab[-1] + k[1])\r\n",
+    "# \r\n",
+    "#     last_key = plain_vocab[-1]\r\n",
+    "#     print(k[0] + k[1])\r\n",
+    "\r\n",
+    "print(plain_vocab)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['_', 'd', 'e', 'i', 'l', 'n', 'o', 'r', 's', 't', 'w']\n"
+     ]
     }
    ],
    "metadata": {}
