--- a/cs124_from_languages_to_information/logistic_regression.ipynb
+++ b/cs124_from_languages_to_information/logistic_regression.ipynb
@@ -2,14 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 21,
+   "source": [
+    "import math\r\n",
+    "\r\n",
+    "def sigmoid(x):\r\n",
+    "  return 1 / (1 + math.exp(-x))"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "source": [
     "def dot_product(a_vector, b_vector):\r\n",
     "    # a1 x b1 + a2 * b2..an*bn return scalar\r\n",
@@ -17,8 +22,12 @@
     "\r\n",
     "X = [2.5,-5,-1.2,0.5,2,0.7]\r\n",
     "Y = [3,2,1,3,0,4.19]\r\n",
+    "\r\n",
     "print(round(dot_product(X,Y), 5))\r\n",
-    "print(round(dot_product(X,Y), 5) + 0.1)"
+    "\r\n",
+    "classified_1 = round(dot_product(X,Y), 5) + 0.1\r\n",
+    "prob_1 = sigmoid(classified_1)\r\n",
+    "print(round(prob_1, 2))"
    ],
    "outputs": [
     {
@@ -26,7 +35,7 @@
      "name": "stdout",
      "text": [
       "0.733\n",
-      "0.833\n"
+      "0.7\n"
      ]
     }
    ],
@@ -34,16 +43,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "source": [
-    "import numpy\r\n",
+    "import numpy as np\r\n",
     "\r\n",
-    "# [2.5,-5,-1.2,0.5,2,0.7].[3,2,1,3,0,4.19] + 0.1\r\n",
+    "X = [2.5,-5,-1.2,0.5,2,0.7]\r\n",
+    "Y = [3,2,1,3,0,4.19]\r\n",
     "\r\n",
+    "result = np.dot(X, Y)\r\n",
+    "print(round(result, 5))\r\n",
     "\r\n",
-    "result = numpy.dot( numpy.array(A)[:,0], B)"
+    "classified_2 = round(result, 5) + 0.1\r\n",
+    "prob_2 = sigmoid(classified_1)\r\n",
+    "print(round(prob_2, 2))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.733\n",
+      "0.7\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
