CS124: playing with the Logistic Regression

--- a/cs124_from_languages_to_information/logistic_regression.ipynb
+++ b/cs124_from_languages_to_information/logistic_regression.ipynb
@@ -55,7 +55,9 @@
     "\r\n",
     "classified_2 = round(result, 5) + 0.1\r\n",
     "prob_2 = sigmoid(classified_1)\r\n",
-    "print(round(prob_2, 2))"
+    "n_prob_2 = 1 - sigmoid(classified_1)\r\n",
+    "print(round(prob_2, 2))\r\n",
+    "print(round(n_prob_2, 2))"
    ],
    "outputs": [
     {
