CS124: playing cross-entropy loss

--- a/cs124_from_languages_to_information/logistic_regression.ipynb
+++ b/cs124_from_languages_to_information/logistic_regression.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "source": [
     "import numpy as np\r\n",
     "\r\n",
@@ -65,7 +65,57 @@
      "name": "stdout",
      "text": [
       "0.733\n",
-      "0.7\n"
+      "0.7\n",
+      "0.3\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "source": [
+    "# Loss\r\n",
+    "import math\r\n",
+    "import numpy\r\n",
+    "\r\n",
+    "def sigmoid(x):\r\n",
+    "    return 1 / (1 + math.exp(-x))\r\n",
+    "\r\n",
+    "result = np.dot(X, Y)\r\n",
+    "classified_2 = round(result, 5) + 0.1\r\n",
+    "p_prob = sigmoid(classified_1)\r\n",
+    "n_prob = 1 - sigmoid(classified_1)\r\n",
+    "print(f\"Positive probability: {round(p_prob, 2)}\")\r\n",
+    "print(f\"Negative probability: {round(n_prob, 2)}\")\r\n",
+    "\r\n",
+    "# y = 1\r\n",
+    "# LCE = -[y * log(sigmoid(np.dot(X, Y) + 0.1) + (1 - y) * log(1 - sigmoid(np.dot(X, Y) + 0.1))]\r\n",
+    "# LCE = -[1 * log(sigmoid(np.dot(X, Y) + 0.1) + (1 - 1) * log(1 - sigmoid(np.dot(X, Y) + 0.1))]\r\n",
+    "# LCE = -[log(sigmoid(np.dot(X, Y) + 0.1) + 0]\r\n",
+    "# LCE = -[log(sigmoid(np.dot(X, Y) + 0.1)]\r\n",
+    "\r\n",
+    "p_lce = -(math.log(round(p_prob, 2)))\r\n",
+    "print(f\"Cross-entropy loss (positive prediction y=1): {round(p_lce, 2)}\")\r\n",
+    "\r\n",
+    "# y = 0\r\n",
+    "# LCE = -[y * log(sigmoid(np.dot(X, Y) + 0.1) + (1 - y) * log(1 - sigmoid(np.dot(X, Y) + 0.1))]\r\n",
+    "# LCE = -[0 * log(sigmoid(np.dot(X, Y) + 0.1) + (1 - 0) * log(1 - sigmoid(np.dot(X, Y) + 0.1))]\r\n",
+    "# LCE = -[0 + (1) * log(1 - sigmoid(np.dot(X, Y) + 0.1))]\r\n",
+    "# LCE = -[log(1 - sigmoid(np.dot(X, Y) + 0.1))]\r\n",
+    "n_lce = -(math.log(round(n_prob, 2)))\r\n",
+    "print(f\"Cross-entropy loss (negative prediction y=0): {round(n_lce, 2)}\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Positive probability: 0.7\n",
+      "Negative probability: 0.3\n",
+      "Cross-entropy loss (positive prediction y=1): 0.36\n",
+      "Cross-entropy loss (negative prediction y=0): 1.2\n"
      ]
     }
    ],
