CS124: playing with the Linear Regression

--- a/cs124_from_languages_to_information/linear_regression.ipynb
+++ b/cs124_from_languages_to_information/linear_regression.ipynb
@@ -159,6 +159,124 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from sklearn.cross_decomposition import PLSRegression\r\n",
+    "from sklearn.decomposition import PCA\r\n",
+    "from sklearn.decomposition import PCA\r\n",
+    "from sklearn.linear_model import LinearRegression\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.pipeline import make_pipeline\r\n",
+    "from sklearn.preprocessing import StandardScaler\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "import numpy as np\r\n",
+    "\r\n",
+    "rng = np.random.RandomState(0)\r\n",
+    "n_samples = 500\r\n",
+    "cov = [[3, 3],\r\n",
+    "       [3, 4]]\r\n",
+    "x = rng.multivariate_normal(mean=[0, 0], cov=cov, size=n_samples)\r\n",
+    "pca = PCA(n_components=2).fit(x)\r\n",
+    "\r\n",
+    "\r\n",
+    "plt.scatter(x[:, 0], x[:, 1], alpha=.3, label='samples')\r\n",
+    "for i, (comp, var) in enumerate(zip(pca.components_, pca.explained_variance_)):\r\n",
+    "    comp = comp * var  # scale component by its variance explanation power\r\n",
+    "    plt.plot([0, comp[0]], [0, comp[1]], label=f\"Component {i}\", linewidth=5,\r\n",
+    "             color=f\"C{i + 2}\")\r\n",
+    "plt.gca().set(aspect='equal',\r\n",
+    "              title=\"2-dimensional dataset with principal components\",\r\n",
+    "              xlabel='first feature', ylabel='second feature')\r\n",
+    "\r\n",
+    "y = x.dot(pca.components_[1]) + rng.normal(size=n_samples) / 2\r\n",
+    "\r\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(10, 3))\r\n",
+    "\r\n",
+    "axes[0].scatter(x.dot(pca.components_[0]), y, alpha=.3)\r\n",
+    "axes[0].set(xlabel='Projected data onto first PCA component', ylabel='y')\r\n",
+    "axes[1].scatter(x.dot(pca.components_[1]), y, alpha=.3)\r\n",
+    "axes[1].set(xlabel='Projected data onto second PCA component', ylabel='y')\r\n",
+    "\r\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=rng)\r\n",
+    "\r\n",
+    "pcr = make_pipeline(StandardScaler(), PCA(n_components=1), LinearRegression())\r\n",
+    "pcr.fit(x_train, y_train)\r\n",
+    "pca = pcr.named_steps['pca']  # retrieve the PCA step of the pipeline\r\n",
+    "\r\n",
+    "pls = PLSRegression(n_components=1)\r\n",
+    "pls.fit(x_train, y_train)\r\n",
+    "\r\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(10, 3))\r\n",
+    "axes[0].scatter(pca.transform(x_test), y_test, alpha=.3, label='ground truth')\r\n",
+    "axes[0].scatter(pca.transform(x_test), pcr.predict(x_test), alpha=.3,\r\n",
+    "                label='predictions')\r\n",
+    "axes[0].set(xlabel='Projected data onto first PCA component',\r\n",
+    "            ylabel='y', title='PCR / PCA')\r\n",
+    "axes[0].legend()\r\n",
+    "axes[1].scatter(pls.transform(x_test), y_test, alpha=.3, label='ground truth')\r\n",
+    "axes[1].scatter(pls.transform(x_test), pls.predict(x_test), alpha=.3,\r\n",
+    "                label='predictions')\r\n",
+    "axes[1].set(xlabel='Projected data onto first PLS component',\r\n",
+    "            ylabel='y', title='PLS')\r\n",
+    "axes[1].legend()\r\n",
+    "plt.tight_layout()\r\n",
+    "plt.show()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import numpy as np\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "from sklearn.metrics import r2_score\r\n",
+    "\r\n",
+    "from sklearn.linear_model import LinearRegression\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "\r\n",
+    "np.random.seed(42)\r\n",
+    "\r\n",
+    "n_samples, n_features = 200, 50\r\n",
+    "x = np.random.randn(n_samples, n_features)\r\n",
+    "true_coef = 3 * np.random.randn(n_features)\r\n",
+    "\r\n",
+    "# Threshold coefficients to render them non-negative\r\n",
+    "true_coef[true_coef < 0] = 0\r\n",
+    "y = np.dot(x, true_coef)\r\n",
+    "\r\n",
+    "# Add some noise\r\n",
+    "y += 5 * np.random.normal(size=(n_samples, ))\r\n",
+    "\r\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.5)\r\n",
+    "\r\n",
+    "reg_nnls = LinearRegression(positive=True)\r\n",
+    "y_pred_nnls = reg_nnls.fit(x_train, y_train).predict(x_test)\r\n",
+    "r2_score_nnls = r2_score(y_test, y_pred_nnls)\r\n",
+    "print(\"NNLS R2 score\", r2_score_nnls)\r\n",
+    "\r\n",
+    "reg_ols = LinearRegression()\r\n",
+    "y_pred_ols = reg_ols.fit(x_train, y_train).predict(x_test)\r\n",
+    "r2_score_ols = r2_score(y_test, y_pred_ols)\r\n",
+    "print(\"OLS R2 score\", r2_score_ols)\r\n",
+    "\r\n",
+    "fig, ax = plt.subplots()\r\n",
+    "ax.plot(reg_ols.coef_, reg_nnls.coef_, linewidth=0, marker=\".\")\r\n",
+    "\r\n",
+    "low_x, high_x = ax.get_xlim()\r\n",
+    "low_y, high_y = ax.get_ylim()\r\n",
+    "low = max(low_x, low_y)\r\n",
+    "high = min(high_x, high_y)\r\n",
+    "ax.plot([low, high], [low, high], ls=\"--\", c=\".3\", alpha=.5)\r\n",
+    "ax.set_xlabel(\"OLS regression coefficients\", fontweight=\"bold\")\r\n",
+    "ax.set_ylabel(\"NNLS regression coefficients\", fontweight=\"bold\")"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
